[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/title.png" type="Texture" id=1]
[ext_resource path="res://Sprites/bckrngTITLE.png" type="Texture" id=2]
[ext_resource path="res://Sprites/start.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Start.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="TitleScreen" type="Node2D"]

[node name="Title" type="Sprite" parent="."]
position = Vector2( 160, 37 )
scale = Vector2( 2.2, 2.2 )
texture = ExtResource( 1 )

[node name="BACKGROUND" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 160, 90 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Start" type="Area2D" parent="."]
position = Vector2( 160, 112 )
scale = Vector2( 2.5, 2.5 )
z_index = 5
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Start"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Start"]
texture = ExtResource( 3 )
hframes = 2

[connection signal="input_event" from="Start" to="Start" method="_on_Start_input_event"]
[connection signal="mouse_entered" from="Start" to="Start" method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="Start" method="_on_Start_mouse_exited"]
